# cplusplus

./: .gitignore  README.md  SUNDRY_README.md  clearcode.sh  clearengines.sh  clearmeta.sh  copypengines2code.sh  copypengines2meta.sh  readme.md  touchtime.sh
code/: .clang-format  CMakeLists.txt  vs2019.bat
code/engines/thirds/: CMakeLists.txt
code/projects/: CMakeLists.txt
code/projects/battleserver/: CMakeLists.txt  battleserver.cpp  battleserver.h  main.cpp  matchsession.cpp  matchsession.h  servermgr.cpp
code/projects/centerserver/: CMakeLists.txt  centerserver.cpp  centerserver.h  main.cpp  servermgr.cpp  servermgr.h
code/projects/common/: errorcode.h  msgidrange.h  option.h  tip.h  utils.h
code/projects/dbserver/: CMakeLists.txt  dbserver.cpp  dbserver.h  hallsession.cpp  hallsession.h  main.cpp  multiargs.hpp  servermgr.cpp  servermgr.h
code/projects/example/: json_example.cpp  protobuf_example.cpp  xml_example.cpp  yaml_example.cpp
code/projects/frame/: CMakeLists.txt  asyncmodule.cpp  asyncmodule.h  calcdelay.cpp  calcdelay.h  coder.cpp  coder.h  commonheader.h  csclientsession.cpp  csclientsession.h  databasecfgmgr.cpp  databasecfgmgr.h  framecfgmgr.cpp  framecfgmgr.h  globalset.h  httpclient.cpp  httpclient.h  httpconsumer.cpp  httpconsumer.h  httpproducer.cpp  httpproducer.h  iddealer.hpp  idmaker.cpp  idmaker.h  ilogicserver.h  msglabel.h  multiargs.hpp  sdserversession.cpp  sdserversession.h  server.cpp  server.h  servercfg.cpp  servercfg.h  servicediscoveryclient.cpp  servicediscoveryclient.h  servicediscoveryhttpclient.cpp  servicediscoveryhttpclient.h  session.cpp  session.h  signal.h  (+6 more)
code/projects/gatewayserver/: CMakeLists.txt  clientsession.cpp  clientsession.h  gatewayserver.cpp  gatewayserver.h  hallsession.cpp  hallsession.h  loginsession.cpp  loginsession.h  main.cpp  servermgr.cpp
code/projects/hallserver/: CMakeLists.txt  centersession.cpp  centersession.h  dbsession.cpp  dbsession.h  gatewaysession.cpp  gatewaysession.h  hallserver.cpp  hallserver.h  main.cpp  matchsession.cpp  matchsession.h  servermgr.cpp
code/projects/matchserver/: CMakeLists.txt  battlesession.cpp  battlesession.h  hallsession.cpp  main.cpp  matchserver.cpp  matchserver.h  servermgr.cpp
code/projects/pb/: CMakeLists.txt  cs_common.pb.cc  cs_common.pb.h  cs_msg_id.pb.cc  cs_msg_id.pb.h  ss_base.pb.cc  ss_base.pb.h
code/projects/registryserver/: CMakeLists.txt  main.cpp  registrycfg.cpp  registrycfg.h  registryserver.cpp  registryserver.h  sdclientsession.cpp  sdclientsession.h  servicediscoveryserver.cpp  servicediscoveryserver.h
code/projects/staticdata/: staticdatamgr.cpp  staticdatamgr.h
code/projects/tsrank/: CMakeLists.txt
code/projects/tsrank/tsgatewayserver/: CMakeLists.txt  main.cpp  servermgr.cpp  servermgr.h  tsgatewayserver.cpp  tsgatewayserver.h  tsrankserver.cpp  tsrankserver.h
code/projects/tsrank/tsrankserver/: CMakeLists.txt
engines/: .clang-format  CMakeLists.txt
engines/cmake/: linux.cmake  windows.cmake
engines/engine/inc/common/: convert.hpp  errorstring.h  icoder.h  iocontextpool.h  list.h  loop_buffer.h  loopbuffer.h  net_stream.h  netstream.h  object_pool_mgr.h  objectpool.h  objectpoolmgr.h  reflector.hpp  singleton.hpp  threadqueue.h  utils.hpp  var_type.hpp
engines/engine/inc/log/: logger.h
engines/engine/inc/mysql/: db_conn.h  db_define.h  db_field.h  db_module.h  db_record_set.h  db_stream.h  dbcommand.h  dbfield.h  dbrecordset.h  env.h  idbcommand.h  idbrecordset.h  imysqlrecordset.h  mysqlconn.h  mysqlmodule.h  sql_tool.h  sqltool.h
engines/engine/inc/redis/: redisconn.h  redisdefine.h  redismodule.h  reply.h
engines/engine/inc/tcp/: connection.h  connectionmgr.h  env.h  event.h  iconnection.h  ievent.h  inet.h  isession.h  listener.h  net.h
engines/engine/inc/timer/: env.h  itimer.h  timewheel.h
engines/engine/luamod/: luaproxy.cpp  luaproxy.h  server.cpp  server.h
engines/engine/src/: CMakeLists.txt
engines/engine/src/common/: CMakeLists.txt  iocontextpool.cpp  loop_buffer.cpp  loopbuffer.cpp  net_stream.cpp  netstream.cpp  object_pool_mgr.cpp  objectpoolmgr.cpp  thread_queue.cpp  threadqueue.cpp
engines/engine/src/log/: CMakeLists.txt  logger.cpp
engines/engine/src/mysql/: CMakeLists.txt  db_conn.cpp  db_module.cpp  db_stream.cpp  mysqlconn.cpp  mysqlmodule.cpp
engines/engine/src/redis/: CMakeLists.txt  redisconn.cpp  redismodule.cpp
engines/engine/src/tcp/: CMakeLists.txt  connection.cpp  connectionmgr.cpp  listener.cpp  net.cpp
engines/engine/src/timer/: CMakeLists.txt  timer_register.cpp  timerregister.cpp  timewheel.cpp
engines/example/: CMakeLists.txt  asan_example.cpp  gperftools_example.cpp  obj_pool_example.cpp
engines/example/CSharp/: CSharp.sln
engines/example/CSharp/CSharp/: dotnet_publish.sh
engines/example/bak/: CMakeLists.txt  client_example.cpp  config_example.cpp  convert_example.cpp  csharp_example.cpp  obj_pool_example.cpp  server_example.cpp  timer_example.cpp  udp_client_example.cpp  udp_server_example.cpp
engines/example/callcsharp/: main.cpp
engines/example/callcsharp/CSharp/: util.cs
engines/example/convert/: CMakeLists.txt  main.cpp
engines/example/log/: CMakeLists.txt  main.cpp
engines/example/meta/: CMakeLists.txt  main.cpp
engines/example/mysql/: CMakeLists.txt  main.cpp
engines/example/timer/: CMakeLists.txt  calcdelay.h  main.cpp
engines/study/inc/config/: config.h  config_extemplate.hpp  config_interface.hpp  config_log.h  config_macros.hpp  config_mgr.h  config_template.hpp  csv_parser.hpp  ex_config.h
engines/study/inc/csharp/: coreclrhost.h  env.h  net_core.h
engines/study/inc/redis/: mem_db_conn.h  mem_db_define.h  mem_db_module.h
engines/study/inc/redis_back/: command.h  env.h  redisconn.h  redismodule.h  reply.h
engines/study/inc/udp/: env.h  (+8 more)
engines/study/src/: CMakeLists.txt
engines/tools/excel2config/: read_me.txt
engines/tools/excel2proto/: cplusplus_generate.bat  encrye.bat  go_generate.bat  read_me.txt
meta/: .clang-format  CMakeLists.txt
meta/engines/cmake/: linux.cmake
meta/meta/: CMakeLists.txt  main.cpp
(+120 files in other folders)
